# github_summary

./: .dockerignore  .gitignore  .tmuxp.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  release.yml  ruff.yml
config/: config.toml.example
docs/: API.md  CONCURRENCY.md  CONFIGURATION.md  PROJECT_STRUCTURE.md  SETUP.md  api_reference.md  testing_guide.md
examples/: README.md  advanced.toml  basic.toml  minimal.toml  release-only.toml  scheduling.toml
github_summary/: actions.py  app.py  cli.py  config.py  github_client.py  last_run_manager.py  llm_client.py  main.py  models.py  paths.py  queries.py  rss.py  scheduler.py  summarizer.py  summary_cache.py  web.py
tests/: conftest.py  test_actions.py  test_app.py  test_cli.py  test_config.py  test_cron_schedule.py  test_github_client.py  test_integration.py  test_last_run_manager.py  test_llm_client.py  test_per_repo_schedule.py  test_releases.py  test_rss.py  test_summarizer.py  test_summary_cache.py
