[project]
name = "github-summary"
version = "0.2.0"
description = "A CLI tool to summarize GitHub repository activity using LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "typer",
    "rich",
    "python-dotenv",
    "requests",
    "pytest",
    "toml",
    "openai",
    "ipdb",
    "feedgen",
    "markdown-it-py",
    "tenacity",
    "tzlocal>=5.3.1",
    "fastapi",
    "uvicorn[standard]",
    "apscheduler",
]

[project.scripts]
github-summary = "github_summary.main:main"

[tool.setuptools]
packages = ["github_summary"]

[tool.ruff]
line-length = 120
indent-width = 4
lint.extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",       # short traceback format
    "--strict-markers", # strict marker checking
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
