[project]
name = "github-summary"
version = "1.0.0"
description = "A CLI tool to summarize GitHub repository activity using LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "python-dotenv",
    "typer",
    "rich",
    "httpx",
    "toml",
    "openai",
    "feedgen",
    "markdown-it-py",
    "tenacity",
    "tzlocal>=5.3.1",
    "fastapi",
    "uvicorn[standard]",
    "apscheduler",
    "gidgethub>=5.4.0",
    "asyncer>=0.0.8",
]

[project.scripts]
ghsum = "github_summary.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["github_summary"]

[tool.ruff]
line-length = 120
indent-width = 4
lint.extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",       # short traceback format
    "--strict-markers", # strict marker checking
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests",
]

[dependency-groups]
dev = [
    "ipdb",
    "pyrefly>=0.28.1",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.12.8",
]
